--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -15,3 +15,5 @@
   -o-border-radius: @tl @tr @br @bl;
   border-radius: @tl @tr @br @bl;
 }
+
+.container{background-color: red; .border-radius(10px)}
