--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,30 +36,37 @@
 
 </head>
 <body>
-<div id="content-wrapper">
-    <div class="page-header">
-        <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1">
-            {% block navbar %}
-                <nav class="navbar navbar-inverse">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">Bird Office - Gestion interne du personnel</a>
-                        </div>
-                        <div>
 
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                            </ul>
-                        </div>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+            {% block navbar %}
+                <nav class="navbar">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">
+                            <img class="logo" src="{{ asset('images/logo.png') }}" title="Bird Office Logo" />
+                            <!--<h1 class="center">Gestion interne du personnel</h1>-->
+                        </a>
+                    </div>
+
+                    <div>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        </ul>
                     </div>
                 </nav>
             {% endblock %}
-        </div>
     </div>
-
-    <div class="col-md-10 col-md-offset-1" role="main">
+</nav>
+<!--<div class="col-md-10 col-md-offset-1" role="main">-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-md-8">
         {% block body %}{% endblock %}
+        </div>
+        <div class="col-lg-2"></div>
     </div>
 </div>
+
 </body>
 </html>
