--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-default" >
+    <button type="button" class="btn btn-default margin15">
         Ajouter un Collaborateur
     </button>
  <div id="searchContainer">
