--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -15,5 +15,37 @@
   -o-border-radius: @tl @tr @br @bl;
   border-radius: @tl @tr @br @bl;
 }
+.page-header {
+  margin: 0 auto ;
+}
 
-.container{background-color: red; .border-radius(10px)}
+.margin15 {
+  margin-bottom: 15px;
+}
+.icon-size {
+  color: #a0a0a0;
+  font-size: 19px;
+  vertical-align: middle;
+}
+.h1, h1 {
+  font-size: 16px;
+  font-weight: lighter;
+}
+.navbar {
+  min-height: 55px;
+}
+.center {
+  display: inline-block;
+  margin: 0 auto;  text-align: center;
+}
+.navbar-default {
+  border-bottom: 3px solid #21a689;
+}
+
+.btn-default   {
+  background: @flat-green;
+  color: @white;
+}
+/*colors*/
+@flat-green: #1abc9c;
+@white: #ffffff;
