--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -19,9 +19,9 @@
                 <td class="text-center">{{ user.username }}</td>
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
-                    <a class="text-danger" href=""><i class="fa fa-trash-o"></i></a>
-                    <a class="text-default" href=""><i class="fa fa-edit"></i></a>
-                    <a class="text-default" href=""><i class="fa fa-search"></i></a>
+                    <a class="text-danger" href=""><i class="fa fa-trash-o icon-size"></i></a>
+                    <a class="text-default" href=""><i class="fa fa-edit icon-size"></i></a>
+                    <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
                 </td>
             </tr>
         {% endfor %}
