--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -6,34 +6,37 @@
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-<div class="container">
+
+<div class="container-fluid">
     <div class="row">
+        <div class="col-lg-3"></div>
         <div class="col-lg-6">
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-<div>
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
-</div>
-
-<div>
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
-</div>
-
-<div>
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-</div>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-primary" />
-</form>
+            <div class="wrapper">
+                <h1 class="center headline">Gestion interne du personnel</h1>
+                <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin margin">
+                    <h2 class="form-signin-heading center margin15">Connectez-vous</h2>
+                      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                    <div>
+                        <label for="username">{{ 'security.login.username'|trans }}</label>
+                        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required="required" />
+                    </div>
+                    <div>
+                        <label for="password">{{ 'security.login.password'|trans }}</label>
+                        <input type="password" id="password" name="_password" class="form-control" required="required" />
+                    </div>
+                    <div class="space">
+                        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                    </div>
+                    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-lg btn-primary btn-block" />
+                     <h2 class="form-signin-heading center margin">Vous n'êtes pas inscrit ?</h2>
+                     <a href="{{ path('fos_user_registration_register') }}" class="hover">
+                         <input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary center space block" />
+                     </a>
+                </form>
             </div>
-        <div class="col-lg-6">
-            <p> Vous n'êtes pas inscrit ?</p>
-            <a href="{{ path('fos_user_registration_register') }}"><input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary" /></a>
-
         </div>
+        <div class="col-lg-3"></div>
     </div>
 </div>
 {% endblock fos_user_content %}
