--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -29,82 +29,4 @@
   border-radius: @tl @tr @br @bl;
 }
 
-.hover{
-  visibility: visible;
-}
-.hover:hover {
-  text-decoration:none;
-}
-h2.form-signin-heading {
-  font-size: 15px;
-  font-style: italic;
-  margin-top: @margin;
-}
-.space {
-  margin-top: @margin!important;
-}
-.form-signin {
-  padding: @padding15;
-}
-.block {
-  display: block;
-}
-.wrapper {
-  padding: @padding15;
-  box-shadow: @shadow;
-  background: @grey-nav;
-}
-.page-header {
-  margin: 0 auto ;
-}
-.margin15 {
-  margin-bottom: 15px!important;
-}
-.icon-size {
-  color: #a0a0a0;
-  font-size: 19px;
-  vertical-align: middle;
-}
-.h1, h1, h2, .h2 {
-  font-size: 16px;
-  font-weight: lighter;
-  margin: 0;
-}
-.navbar {
-  min-height: 55px;
-}
-.center {
-  margin: 0 auto;
-  text-align: center;
-}
-.navbar-default {
-  border-bottom: 3px solid #7EBDCE;
-  margin-bottom: 70px;
-}
-
-.btn-default,
-.btn-block,
-.btn-primary {
-  border:none;
-  background: @flat-green;
-  color: @white;
-  padding:6px;
-}
-.btn-default:hover,
-.btn-block:hover,
-.btn-primary:hover{
-  transition-duration: @transition;
-  background: @green-hover;
-  color: @white;
-  text-decoration:none;}
-.headline {
-  font-size: 22px;
-}
-.headline::after {
-  border-bottom: 1px solid #1abc9c;
-  content: " ";
-  display: block;
-  margin: 0 auto;
-  padding-top: 10px;
-  width: 40px;
-}
+.center { margin: 0 auto; text-align: center }
