--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-offset-3 col-md-6 admin-title">
-            <h1 class="text-center">Liste des collaborateurs</h1>
+            <h1 class="center headline margin15">Liste des collaborateurs</h1>
             <p class="text-center">Responsable :
                 <select name="manager" id="manager">
                     <option selected></option>
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-default" >
+    <button type="button" class="btn btn-default margin15" >
         Ajouter un Collaborateur
     </button>
  <div id="searchContainer">
