fix merge conficts

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,6 +24,7 @@
 
     {% stylesheets  output="css/style.css"
     '@UserBundle/Resources/less/class.less'
+    '@UserBundle/Resources/less/styles.less'
     %}
     <link rel="stylesheet" href="{{ asset_url }}">
     {% endstylesheets %}
