--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-offset-3 col-md-6 admin-title">
-            <h1 class="text-center">Liste des collaborateurs</h1>
+            <h1 class="center headline margin15">Liste des collaborateurs</h1>
             <p class="text-center">Responsable :
                 <select name="manager" id="manager">
                     <option selected></option>
@@ -17,12 +17,27 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-default" >
-        Ajouter un Collaborateur
-    </button>
- <div id="searchContainer">
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Ajouter un Collaborateur</h4>
+                </div>
+                <div class="modal-body">
+                    {{ render(controller('UserBundle:Registration:Register')) }}
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
- </div>
+    <button type="button" class="btn btn-default margin15" data-toggle="modal"  data-target="#myModal">        Ajouter un Collaborateur
+
+    </button>
+    <div id="searchContainer">
+
+    </div>
 
     <script>
         console.log($('#manager').val());
@@ -51,6 +66,7 @@
 
         }
 
+
+
     </script>
 {% endblock %}
-
