--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -86,8 +86,7 @@
                     plainPassword,
                     managedBy
             );
-            alert('yo');
-            e.stopPropagation();
+            return false;
         });
 
 
