--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -4,6 +4,7 @@
 @green-hover: #3cdebe;
 @soft-grey: #cccccc;
 @grey-nav: #f8f8f8;
+@flat-red: #c0392b;
 @padding15: 15px;
 @shadow: 2px 5px 4px #e3e3e3;
 /* Transitions */
