--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -7,11 +7,13 @@
 @flat-red: #c0392b;
 @padding15: 15px;
 @shadow: 2px 5px 4px #e3e3e3;
+@blue-bird: #7DBBCC;
 /* Transitions */
 @transition : 0.7s;
 @margin: 15px;
 @block: block;
 @invisible: none;
+
 .border-radius(@radius: 5px) {
   -webkit-border-radius: @radius;
   -khtml-border-radius: @radius;
