--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -26,10 +26,38 @@ h2.form-signin-heading {
 .margin15 {
     margin-bottom: 15px!important;
 }
+.head-table th {
+    background: @blue-bird!important; border: none !important; color: #ffffff;
+}
+.left {
+    float:left;
+}
+.fa-trash-o::before {
+    color: #e74c3c;
+}
+.fa-edit::before, .fa-pencil-square-o::before {
+    color: #7ebdce; display: block; margin-top: 2px;
+}
+
+.fa-search::before {
+    color: #6d879b;
+}
+.right{
+    float: right;
+}
 .icon-size {
-    color: #a0a0a0;
     font-size: 19px;
     vertical-align: middle;
+    opacity: 0.74;
+    &:hover {
+        opacity:1;
+    }
+}
+td.actions a {
+    margin-right: 5px;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 .h1, h1, h2, .h2 {
     font-size: 16px;
