--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -2,16 +2,14 @@
     {# total items count #}
 
 
-    <table class="table table-striped table-bordered text-center">
-        <tr>
-            {# sorting of properties based on query components #}
-            <th class="text-center">Id</th>
-            <th class="text-center">Username</th>
-            <th class="text-center">Email</th>
-            <th class="text-center" width="100">Actions</th>
-
-        </tr>
-
+        <table class="table table-striped table-bordered text-center">
+            <tr class="head-table">
+                {# sorting of properties based on query components #}
+                <th class="text-center">Id</th>
+                <th class="text-center">Username</th>
+                <th class="text-center">Email</th>
+                <th class="text-center" width="100">Actions</th>
+            </tr>
         {# table body #}
         {% for user in users %}
             <tr {% if loop.index is odd %}class="color"{% endif %}>
