--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -69,25 +69,8 @@
 
         var addPartnerAjax = "{{  path('addPartnerAjax') }}";
 
-        var civility = $('#fos_user_registration_form_civility').val();
-        var name = $('#fos_user_registration_form_name').val();
-        var username = $('#fos_user_registration_form_username').val();
-        var email = $('#fos_user_registration_form_email').val();
-        var plainPassword = $('#fos_user_registration_form_plainPassword').val();
-        var managedBy = $('#fos_user_registration_form_managedBy').val();
-
         $('#add-partner').click(function (){
-           // console.log(plainPassword);
-            ajax_add_partner(
-                    civility,
-                    name,
-                    username,
-                    email,
-                    plainPassword,
-                    managedBy
-            );
-            alert('yo');
-            e.stopPropagation();
+            ajax_add_partner();
         });
 
 
@@ -96,18 +79,20 @@
                 type: "POST",
                 url: addPartnerAjax,
                 data: {
-                    civility:civility,
-                    name:name,
-                    username:username,
-                    email:email,
-                    plainPassword:plainPassword,
-                    managedBy:managedBy
+                    civility:$('#fos_user_registration_form_civility').val(),
+                    name:$('#fos_user_registration_form_name').val(),
+                    username:$('#fos_user_registration_form_username').val(),
+                    email:$('#fos_user_registration_form_email').val(),
+                    plainPassword:$('#fos_user_registration_form_plainPassword_first').val(),
+                    managedBy:$('#fos_user_registration_form_managedBy').val()
                 },
             success: function(data) {
                     jQuery('#myModal').addClass('modal-success');
                 }
             });
         }
+
+
 
 
 
