css + page fiche collaborateur

--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -1,6 +1,8 @@
 @import "class";
 
-
+body {
+    font-size: 12px;
+}
 .hover {
     visibility: visible;
     &:hover { text-decoration:none; }
@@ -32,6 +34,14 @@ h2.form-signin-heading {
 .left {
     float:left;
 }
+.space40 {
+    height:40px;
+}
+.checkbox  {
+    margin-bottom: 0;
+    margin-top: 3px;
+}
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th { background-color: #ffffff; }
 .fa-trash-o::before {
     color: #e74c3c;
 }
