--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -31,6 +31,10 @@ h2.form-signin-heading {
 .head-table th {
     background: @blue-bird!important; border: none !important; color: #ffffff;
 }
+.form-control {
+    padding:6px 4px;
+    font-size: 12px;
+}
 .left {
     float:left;
 }
