--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -6,8 +6,9 @@
                 <div class="admin-title">
                     <h1 class="center headline margin15">Fiche collaborateur</h1>
                     <div class="space40"></div>
-                    <div class="left">Choix du mois :
+                    <div class="left">
                         <select class="form-control" id="select">
+                            <option selected disabled>Choix du mois</option>
                             <option>Janvier 2016</option>
                             <option>Décembre 2015</option>
                             <option>Novembre 2015</option>
