--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -3,7 +3,7 @@
 
 
     <table class="table table-striped table-bordered text-center">
-        <tr>
+        <tr class="head-table">
             {# sorting of properties based on query components #}
             <th class="text-center">Id</th>
             <th class="text-center">Username</th>
