--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -20,7 +20,7 @@
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
                     <a class="text-danger" href="{{ path('delete_user', { 'id':user.id }) }}"><i class="fa fa-trash-o icon-size"></i></a>
-                    <a class="text-default" href=""><i class="fa fa-edit icon-size"></i></a>
+                    <i class="fa fa-edit icon-size"></i>
                     <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
                 </td>
             </tr>
