--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -60,6 +60,7 @@ h2.form-signin-heading {
     float: right;
 }
 .icon-size {
+    cursor: pointer;
     font-size: 19px;
     vertical-align: middle;
     opacity: 0.74;
