--- a/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,8 @@
                 <div class="space40"></div>
                 <div class="left">
                     <select class="form-control" id="select">
-                        <option selected disabled>Responsable</option>
+                        <option selected></option>
+                        <option>Responsable</option>
                         {% for manager in managers %}
                             <option value="{{ manager.id }}">{{ manager.username }}</option>
                         {% endfor %}
