--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -32,6 +32,7 @@ h2.form-signin-heading {
     background: @blue-bird!important; border: none !important; color: #ffffff;
 }
 .form-control {
+    height:30px;
     padding:6px 4px;
     font-size: 12px;
 }
