--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -96,13 +96,16 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Détails de la demande</h4>
+                    <h4 class="modal-title" id="myModalLabel">Ajout du jour</h4>
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
                             <label>Date début</label>
-                            <input class="form-control date" id="date" type="text" value="">                            <label>Date fin</label>
+                            <input type="date" class="form-control"  placeholder="">
+                        </div>
+                        <div class="form-group">
+                            <label>Date fin</label>
                             <input type="date" class="form-control"  placeholder="">
                         </div>
                     </form>
