modal "Ajout de jour"

--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -32,7 +32,7 @@ h2.form-signin-heading {
     background: @blue-bird!important; border: none !important; color: #ffffff;
 }
 .form-control {
-    height:30px;
+    height:31px;
     padding:6px 4px;
     font-size: 12px;
 }
@@ -52,6 +52,9 @@ h2.form-signin-heading {
 }
 .fa-edit::before, .fa-pencil-square-o::before {
     color: #7ebdce; display: block; margin-top: 2px;
+}
+.clear {
+    clear: both;
 }
 
 .fa-search::before {
