--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -1,7 +1,7 @@
 /*colors*/
-@flat-green: #1abc9c;
+@flat-green: #3C5166;
 @white: #ffffff;
-@green-hover: #3cdebe;
+@green-hover: #3C5166;
 @soft-grey: #cccccc;
 @grey-nav: #f8f8f8;
 @flat-red: #c0392b;
