--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -5,6 +5,8 @@
             <div class="col-md-12">
                 <div class="admin-title">
                     <h1 class="center headline margin15">Fiche collaborateur</h1>
+                    <h2 class="nom-collab">Gabriel</h2>
+                    <h3 class="nom-responsable">Responsable : Kévin</h3>
                     <div class="space40"></div>
                     <div class="left">
                         <select class="form-control" id="select">
