--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -8,6 +8,7 @@
 @padding15: 15px;
 @shadow: 2px 5px 4px #e3e3e3;
 @blue-bird: #7DBBCC;
+@pink-flat: #f28073;
 /* Transitions */
 @transition : 0.7s;
 @margin: 15px;
