--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -65,7 +65,7 @@
                 </td>
             </tr>
         </table>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+    <button type="button" class="btn btn-primary right" data-toggle="modal" data-target="#myModal">
         Détails
     </button>
 
