--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -19,7 +19,9 @@
                 <td class="text-center">{{ user.username }}</td>
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
-                    <a class="text-danger" href="{{ path('delete_user', { 'id':user.id }) }}"><i class="fa fa-trash-o icon-size"></i></a>
+                    <a class="text-danger" href="{{ path('delete_user', { 'id':user.id }) }}">
+                        <i class="fa fa-trash-o icon-size" data-toggle="modal"  data-target="#myModal3" ></i>
+                    </a>
                     <i class="fa fa-edit icon-size"></i>
                     <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
                 </td>
@@ -27,4 +29,22 @@
         {% endfor %}
     </table>
 
+    <!--<button type="button" class="btn btn-default" data-toggle="modal"  data-target="#myModal3">Supprimer</button>-->
+    <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header alert">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Détails de la demande</h4>
+                </div>
+                <div class="modal-body">
+                    Etes-vous sûr de vouloir supprimer ce collaborateur ?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Supprimer</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
