Pop up success (Utilisateur ajouté)

--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -13,8 +13,22 @@
         {{ form_row(form.managedBy) }}
 
         <div>
-            <input id="add-partner" type="submit" class="btn btn-primary" value="suivant"/>
+            <input id="add-partner" type="submit" class="btn btn-primary right" value="Valider" data-toggle="modal" data-target="#myModal3"/>
+            <div class="clear"></div>
         </div>
     </form>
-
+    <!-- Modal : Success-->
+    <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header success">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Ajout d'un collaborateur</h4>
+                </div>
+                <div class="modal-body">
+                    Le collaborateur a été ajouté avec succès !
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock fos_user_content %}
