--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -33,9 +33,15 @@ h2.form-signin-heading {
     &.alert {
         background: @pink-flat;margin-bottom: 0;
     }
+    &.success {
+        background: @flatgreen;
+    }
 }
 .form-control { height:31px; padding:6px 4px;  }
+
 .modal-body { font-size: 13px  }
+
+a:hover, a:focus {text-decoration: none}
 
 h3.nom-responsable {
     font-size: 15px;
@@ -44,14 +50,12 @@ h3.nom-responsable {
     margin: 5px;
     text-align: center;
 }
-.left { float:left;
-}
-.space40 {
-    height:40px;
-}
-.checkbox  {
-    margin-bottom: 0; margin-top: 3px;
-}
+.left { float:left}
+
+.space40 { height:40px}
+
+.checkbox  {margin-bottom: 0; margin-top: 3px;}
+
 h2.nom-collab {
     color: #3c5166;
     font-weight: bold;
@@ -94,13 +98,11 @@ td.actions a {
     font-weight: lighter;
     margin: 0;
 }
-.navbar {
-    min-height: 55px;
-}
+.navbar { min-height: 55px; }
 
-.navbar-default {
-    border-bottom: 3px solid #7EBDCE; margin-bottom: 70px;
-}
+.navbar-default { border-bottom: 3px solid #7EBDCE; margin-bottom: 70px; }
+
+.table {border-top:none}
 
 .btn-default,
 .btn-block,
