--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -1,7 +1,3 @@
-
-    {# total items count #}
-
-
     <table class="table table-striped table-bordered text-center">
         <tr class="head-table">
             {# sorting of properties based on query components #}
@@ -10,8 +6,6 @@
             <th class="text-center">Email</th>
             <th class="text-center" width="100">Actions</th>
         </tr>
-
-
         {# table body #}
         {% for user in users %}
             <tr {% if loop.index is odd %}class="color"{% endif %}>
@@ -19,12 +13,10 @@
                 <td class="text-center">{{ user.username }}</td>
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
-                    <a class="text-danger" href="{{ path('delete_user', { 'id':user.id }) }}"><i class="fa fa-trash-o icon-size"></i></a>
-                    <i class="fa fa-edit icon-size"></i>
+                    <a class="text-danger" href="{{ path('delete_user', { 'id':user.id }) }}"><i  class="fa fa-trash-o icon-size"></i></a>
+                    <i id="edit-user" data-user="{{ user.id }}" class="fa fa-edit icon-size"></i>
                     <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
                 </td>
             </tr>
         {% endfor %}
     </table>
-
-
