--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -1,33 +1,29 @@
 @import "class";
 
-body {
-    font-size: 12px;
-}
+body { font-size: 12px}
+
 .hover {
     visibility: visible;
-    &:hover { text-decoration:none; }
+    &:hover { text-decoration:none }
 }
-h2.form-signin-heading {
-    font-size: 15px; font-style: italic; margin-top: @margin;
-}
+h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margin }
+
 .space { margin-top: @margin!important }
+
 .form-signin { padding: @padding15 }
-.block {
-    display: block;
-}
-.wrapper {
-    padding: @padding15; box-shadow: @shadow; background: @grey-nav;
-}
-.page-header {
-    margin: 0 auto ;
-}
+
+.block { display: block}
+
+.wrapper { padding: @padding15; box-shadow: @shadow; background: @grey-nav }
+
+.page-header { margin: 0 auto}
+
 .close {opacity: 1; color: @white}
-.margin15 {
-    margin-bottom: 15px!important;
-}
-.head-table th {
-    background: @blue-bird!important; border: none !important; color: #ffffff;
-}
+
+.margin15 { margin-bottom: 15px!important}
+
+.head-table th { background: @blue-bird!important; border: none !important; color: #ffffff; }
+
 .modal-header {
     background:@blue-bird; color: @white;
     &.alert {
@@ -37,9 +33,9 @@ h2.form-signin-heading {
         background: @flatgreen;
     }
 }
-.form-control { height:31px; padding:6px 4px;  }
+.form-control { height:31px; padding:6px 4px }
 
-.modal-body { font-size: 13px  }
+.modal-body { font-size: 13px }
 
 a:hover, a:focus {text-decoration: none}
 
@@ -54,30 +50,22 @@ h3.nom-responsable {
 
 .space40 { height:40px}
 
-.checkbox  {margin-bottom: 0; margin-top: 3px;}
+.checkbox  {margin-bottom: 0; margin-top: 3px}
 
-h2.nom-collab {
-    color: #3c5166;
-    font-weight: bold;
-    text-align: center;
-}
-.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th { background-color: #ffffff; }
-.fa-trash-o::before {
-    color: #e74c3c;
-}
-.fa-edit::before, .fa-pencil-square-o::before {
-    color: #7ebdce; display: block; margin-top: 2px;
-}
-.clear {
-    clear: both;
-}
+h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center}
 
-.fa-search::before {
-    color: #6d879b;
-}
-.right{
-    float: right;
-}
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th { background-color: #ffffff }
+
+.fa-trash-o::before { color: #e74c3c }
+
+.fa-edit::before, .fa-pencil-square-o::before { color: #7ebdce; display: block; margin-top: 2px}
+
+.clear { clear: both}
+
+.fa-search::before {color: #6d879b}
+
+.right{ float: right}
+
 .icon-size {
     cursor: pointer;
     font-size: 19px;
@@ -93,14 +81,11 @@ td.actions a {
         margin-right: 0;
     }
 }
-.h1, h1, h2, .h2 {
-    font-size: 16px;
-    font-weight: lighter;
-    margin: 0;
-}
-.navbar { min-height: 55px; }
+.h1, h1, h2, .h2 { font-size: 16px; font-weight: lighter; margin: 0}
 
-.navbar-default { border-bottom: 3px solid #7EBDCE; margin-bottom: 70px; }
+.navbar { min-height: 55px}
+
+.navbar-default { border-bottom: 3px solid #7EBDCE; margin-bottom: 70px }
 
 .table {border-top:none}
 
@@ -132,8 +117,6 @@ td.actions a {
         width: 40px;
     }
 }
-li { font-size: 13px; line-height: 25px;}
+li { font-size: 13px; line-height: 25px}
 
-.error {
-    color: @flat-red; font-size: 15px; font-style: italic; margin-bottom: 15px; text-align: center;
-}
+.error {color: @flat-red; font-size: 15px; font-style: italic; margin-bottom: 15px; text-align: center}
